crates/strider-analyze/tests/snapshots/v3__aarch64__patterns__main.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x7e0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0x2:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "5" [label="const 0x3:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "9" -> "1" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x7f0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "10" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0xdeadbeef:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "14" -> "10" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "15" -> "10" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "16" -> "10" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x7:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v17" [label="Post Call\nx4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v17" [color="#888888", style=dashed];
  "v17" -> "10" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "18" -> "10" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "19" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "10" -> "19" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "20" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x810:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "22" -> "19" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0xffffffff:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "23" -> "19" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "24" -> "19" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v25" [label="Post Call\nx3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "10" -> "v25" [color="#888888", style=dashed];
  "v25" -> "19" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "v26" [label="Post Call\nx4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "10" -> "v26" [color="#888888", style=dashed];
  "v26" -> "19" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "27" -> "19" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "28" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "19" -> "28" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "29" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x824:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "31" -> "28" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "32" -> "28" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x5:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "33" -> "28" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v34" [label="Post Call\nx3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "19" -> "v34" [color="#888888", style=dashed];
  "v34" -> "28" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "35" -> "28" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "36" -> "28" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "37" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "28" -> "37" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "38" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" -> "37" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x854:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "40" -> "37" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x5:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "41" -> "37" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "42" -> "37" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "43" -> "37" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "v44" [label="Post Call\nx4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "28" -> "v44" [color="#888888", style=dashed];
  "v44" -> "37" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "45" -> "37" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "46" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "37" -> "46" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "47" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "48" -> "46" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "49" -> "46" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "v50" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "37" -> "v50" [color="#888888", style=dashed];
  "v50" -> "46" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "v51" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "37" -> "v51" [color="#888888", style=dashed];
  "v51" -> "46" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "49" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "52" -> "49" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "52" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "53" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v55" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "37" -> "v55" [color="#888888", style=dashed];
  "v55" -> "54" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "53" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "37" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "56" -> "53" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "56" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "57" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "58" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0xfffffffffffffff8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "57" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "48" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "52" -> "48" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "47" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "37" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v59" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v59" -> "47" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "52" -> "47" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "60" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v62" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "28" -> "v62" [color="#888888", style=dashed];
  "v62" -> "61" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "60" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "28" -> "60" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "56" -> "60" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "43" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "61" -> "43" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "42" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "45" -> "42" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "38" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "28" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v63" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v63" -> "38" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "45" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v34" -> "36" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "35" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "64" -> "35" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "64" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v65" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "19" -> "v65" [color="#888888", style=dashed];
  "v65" -> "64" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "33" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "66" -> "33" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "66" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "67" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "19" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "56" -> "67" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "31" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "57" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0xfffffffffffffffc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "69" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v70" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v70" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "36" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "69" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "19" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v71" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v71" -> "69" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "66" -> "69" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "72" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "73" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "73" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v74" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "10" -> "v74" [color="#888888", style=dashed];
  "v74" -> "73" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "72" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "10" -> "72" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "56" -> "72" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "24" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "73" -> "24" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "27" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "20" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "10" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v75" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v75" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "18" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "76" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v78" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v78" [color="#888888", style=dashed];
  "v78" -> "77" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "76" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "76" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "56" -> "76" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "15" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "77" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "14" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "18" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "11" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "1" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v79" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v79" -> "11" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "11" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "8" [label="arg[4] ← x4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="arg[3] ← x3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "80" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v81" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v81" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "82" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "82" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "80" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "83" -> "80" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v84" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v84" -> "80" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "85" -> "80" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "85" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "83" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "86" -> "83" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v87" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v87" -> "83" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "88" -> "83" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "88" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "86" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
